# nginx-influxdb-module

./: .gitignore  .travis.yml  LICENSE  README.md  config
data/patch/: 1.9.2.patch
hack/: build-start.sh  nginx.conf
hack/html/: index.html
integration/: influxdb.conf  nginx-tests.sh
src/: ngx_http_influxdb.c  ngx_http_influxdb_metric.c  ngx_http_influxdb_metric.h
test/: .gitignore  CMakeLists.txt  lineprotocol_serialize_test.cpp
